<resources>
    <string name="app_name">Look@me</string>
    <string name="action_settings">Settings</string>
    <string name="action_force_refresh">Force refresh</string>
    <string name="action_add_favourites">Add favourite</string>
    <string name="action_remove_favourites">Remove favourite</string>
    <string name="action_save">Save profile</string>
    <string name="title_social_activity">Nearby</string>
    <string name="title_splash_activity">Look@me</string>
    <string name="title_profile_activity">Profile</string>
    <string name="title_edit_profile_activity">MyProfile</string>
    <string name="title_manage_interest_activity">Interest</string>
    <string name="title_add_interest_activity">Add Interest</string>
    <string name="title_messages_activity">Chat</string>
    <string name="title_contact_activity">Favourites</string>
    <string name="title_statistics_activity">Statistics</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_feelings_activity">Feelings</string>
    <string name="title_chat_activity">Chat</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_transgender">Transgender</string>
    <string name="text_interest">interest</string>
    <string name="title_splashscreen">splash</string>
    <string name="send_btn">Send</string>
    <string name="delete">Delete</string>
    <string name="setAsMainImage">Set as main image</string>
    <string name="text_hint_txt">Write your message here</string>
    <string name="country_CA">CANADA</string>
    <string name="country_CN">CHINA</string>
    <string name="country_FR">FRANCE</string>
    <string name="country_DE">GERMANY</string>
    <string name="country_IT">ITALY</string>
    <string name="country_JA">JAPAN</string>
    <string name="country_KR">KOREA</string>
    <string name="country_TW">TAIWAN</string>
    <string name="country_UK">UK</string>
    <string name="country_US">US</string>
    <string name="language_fr_CA">CANADA_FRENCH</string>
    <string name="language_zh">CHINESE</string>
    <string name="language_en">ENGLISH</string>
    <string name="language_fr">FRENCH</string>
    <string name="language_de">GERMAN</string>
    <string name="language_it">ITALIAN</string>
    <string name="language_ja">JAPANESE</string>
    <string name="language_ko">KOREAN</string>
    <string name="language_zh_CN">SIMPLIFIED_CHINESE</string>
    <string name="language_zh_TW">TRADITIONAL_CHINESE</string>
    <string-array name="menu_items">
        <item>Profile</item>
        <item>Nearby</item>
        <item>Chat</item>
        <item>Favourites</item>
        <item>Statistics</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="button_toggle_service_label">Offline mode</string>
    <string name="text_matching_score">matching score</string>
    <string name="chat_btn">chat</string>
    <string name="viewFullProfile_btn">profile</string>
    <string name="blink_btn">blink!</string>
    <string name="vote_btn">vote</string>
    <string name="dialog_button_close_label">Close</string>
    <string name="text_chat_alt_profile_image">profile image</string>
    <string name="text_chat_sender">sender</string>
    <string name="text_chat_message">message</string>
    <string name="text_chat_datetime">date</string>
    <string name="hint_chat_message_text">Type your message here</string>
    <string name="action_view_profile">View profile</string>
    <string-array name="gender_array">
        <item>@string/edit_profile_spinner_gender_prompt</item>
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
        <item>@string/gender_transgender</item>
    </string-array>
    <string-array name="country_array">
        <item>@string/edit_profile_spinner_country_prompt</item>
        <item>@string/country_CA</item>
        <item>@string/country_CN</item>
        <item>@string/country_DE</item>
        <item>@string/country_FR</item>
        <item>@string/country_IT</item>
        <item>@string/country_JA</item>
        <item>@string/country_KR</item>
        <item>@string/country_TW</item>
        <item>@string/country_UK</item>
        <item>@string/country_US</item>
    </string-array>
    <string-array name="language_array">
        <item>@string/edit_profile_spinner_language_prompt</item>
        <item>@string/language_fr_CA</item>
        <item>@string/language_zh</item>
        <item>@string/language_en</item>
        <item>@string/language_fr</item>
        <item>@string/language_de</item>
        <item>@string/language_it</item>
        <item>@string/language_ja</item>
        <item>@string/language_ko</item>
        <item>@string/language_zh_CN</item>
        <item>@string/language_zh_TW</item>
    </string-array>
    <string name="text_profile_liked">He/She likes you</string>
    <string name="text_profile_photo_image">profile image</string>
    <string name="view_profile_btn_like">Like</string>
    <string name="view_profile_label_like">Like</string>
    <string name="view_profile_lbl_chat">Chat</string>
    <string name="view_profile_btn_chat">Chat</string>
    <string name="loading_profile_message">Please wait&#8230;</string>
    <string name="no_profile_title">Profile not found.</string>
    <string name="no_profile_message">It seems the user you are searching for is no more available, let\'s search someone else nearby.</string>
    <string name="no_profile_button_label">Search nearby</string>
    <string name="favourite_added_message">Added to favourites</string>
    <string name="favourite_removed_message">Removed from favourites</string>
    <string name="title_help_activity">Help</string>
    <string name="help_text_info"><![CDATA[New friends are all around for you to find. With Look@me you can find friends nearby when you move around your city or when you travel: just create your profile, connect to a WiFi area and look around for new people to meet or to chat with. If you really like someone, put a LIKE on him/her: when two "LIKE" match the app will alert you that it\'s time to meet live.\n\nYour personal data and chat conversations will be shared only with people around you, no data will be uploaded by the app on the internet (we don\'t even have any servers to upload to) so all contacts and conversations with other people remain your business.\n\nLook@me works simply with a local WiFi area and it does not require an internet connection. Free WiFi areas are everywhere, for example inside pubs, internet café, trains, public parks, and many other places.\n\nSo, what are you waiting for? Find new real friends nearby you now.]]></string>
    <string name="edit_profile_button_save_profile_text_first_time">Create profile</string>
    <string name="edit_profile_button_save_profile_text">Save profile</string>
    <string name="edit_profile_button_add_image_text">Select a picture</string>
    <string name="edit_profile_button_take_image_text">Take a picture</string>
    <string name="edit_profile_image_thumbnail_description">Profile image</string>
    <string name="edit_profile_label_age_text">Age</string>
    <string name="edit_profile_label_nickname_text">Nickname</string>
    <string name="edit_profile_label_email_text">Email</string>
    <string name="edit_profile_label_gender_text">Gender</string>
    <string name="edit_profile_label_country_text">Country</string>
    <string name="edit_profile_label_language_text">Language</string>
    <string name="edit_profile_label_name_text">Name</string>
    <string name="edit_profile_label_mobile_text">Mobile number</string>
    <string name="edit_profile_label_surname_text">Surname</string>
    <string name="edit_profile_label_facebook_text">www.facebook.com/</string>
    <string name="edit_profile_field_nickname_hint">Choose a nickname</string>
    <string name="edit_profile_field_email_hint">Choose an email</string>
    <string name="edit_profile_spinner_age_prompt">Set your age</string>
    <string name="edit_profile_spinner_country_prompt">Set your country</string>
    <string name="edit_profile_spinner_language_prompt">Set your main language</string>
    <string name="edit_profile_field_name_hint">Type your first name</string>
    <string name="edit_profile_field_mobile_hint">Type your mobile</string>
    <string name="edit_profile_field_surname_hint">Type your family name</string>
    <string name="edit_profile_field_facebook_hint">Type your fb id</string>
    <string name="edit_profile_field_linkedin_hint">Type your linked in id</string>
    <string name="edit_profile_spinner_gender_prompt">gender</string>
    <string name="edit_profile_add_image_select_picture">Select a picture</string>
    <string name="edit_profile_message_profile_saved">Profile saved</string>
    <string name="edit_profile_message_mandatory_fields_not_set">To save your profile you need to insert at least an image and a nickname.</string>
    <string name="edit_profile_message_unable_to_load_image">Unable to load image.</string>
    <string name="edit_profile_message_not_valid_image_path">Unable to load a remote image, please select an image from your local storage.</string>
    <string name="first_time_dialog_message">Create your profile to start searching for new friends nearby</string>
    <string name="first_time_dialog_button_go_to_profile_text">Go to profile</string>
    <string name="message_warning">Warning</string>
    <string name="message_wifi_required">No WiFi connection available. Connect to a WiFi hotspot to find new friends nearby.</string>
    <string name="first_time_dialog_title">First launch</string>
    <string name="chat_conversations_message_no_conversations_yet">There are still no conversations in here. Go to Nearby area and find someone to chat with.</string>
    <string name="nearby_message_no_users_yet">There are not connected people around you yet. Use another WiFi hotspot or simply wait, people will automatically appear here as soon as they connect.</string>
    <string name="settings_communication_service_text">As long as you are connected to a WiFi network, Look@me will be connected with other devices on the same network: you can interact with other people and they can do the same with you. If you enable \'Offline mode\' all features regarding other people will be disabled - you will not be discovered on the net, you will not be able to chat, etc.\n\nPlease note that Look@me does not require an internet connection in any case.</string>
    <string name="set_as_main">Set as main</string>
    <string name="profile_selected_image">profile selected image</string>
    <string name="chat_messages_dialog_error_title">Error</string>
    <string name="message_no_conversation_with_that_id">Conversazione non trovata</string>
    <string name="edit_profile_image_thumbnail_alt">Profile thumbnail</string>
    <string name="message_cant_delete_profile_image">This is your current profile image and it can\'t be deleted. Please choose another profile image if you want to delete this one.</string>
    <string name="click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="unable_to_send_chat_message">Message NOT sent. This user isn\'t nearby anymore.</string>
    <string name="user_is_not_nearby_anymore">This user isn\'t nearby anymore.</string>
    <string name="void_placeholder">Placeholder</string>
    <string name="dialog_image_management">Image management</string>
    <string name="action_title_offline_mode">Offline mode activated</string>
    <string name="switch_toggle_credits_label">Summon developers</string>
    <string name="settings_credits_text">If you enable this option, you will feel - it does not matter where you are - the spirits of Look@me developers all around you. Use with caution.</string>
</resources>