<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_horizontal_margin" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editProfileNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_profile_label_nickname_text" />

        <EditText
            android:id="@+id/editProfileFieldNickname"
            android:layout_gravity="center_vertical"
            android:hint="@string/edit_profile_field_nickname_hint"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editProfileAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_profile_label_age_text" />

        <Spinner
            android:id="@+id/editProfileSpinnerAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:entries="@array/age_array"
            android:prompt="@string/edit_profile_spinner_age_prompt" >
        </Spinner>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editProfileGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_profile_label_gender_text" />

        <Spinner
            android:id="@+id/editProfileSpinnerGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:entries="@array/gender_array"
            android:prompt="@string/edit_profile_spinner_gender_prompt" >
        </Spinner>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editProfileCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_profile_label_country_text" />

        <Spinner
            android:id="@+id/editProfileSpinnerCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:entries="@array/country_array"
            android:prompt="@string/edit_profile_spinner_country_prompt" >
        </Spinner>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editProfileLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_profile_label_language_text" />

        <Spinner
            android:id="@+id/editProfileSpinnerLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/language_array"
            android:prompt="@string/edit_profile_spinner_language_prompt" >
        </Spinner>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_profile_label_name_text" />

        <EditText
            android:id="@+id/editProfileFieldName"
            android:hint="@string/edit_profile_field_name_hint"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editProfileSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_profile_label_surname_text" />

        <EditText
            android:id="@+id/editProfileFieldSurname"
            android:hint="@string/edit_profile_field_surname_hint"
            android:inputType="textPersonName" />
    </TableRow>

</TableLayout>