<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarSize="10dp"
    android:scrollbarStyle="insideOverlay" >

    <Switch
        android:id="@+id/btn_toggle_communication_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:text="@string/button_toggle_service_label" />

    <TextView
        android:id="@+id/settings_communication_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:text="@string/settings_communication_service_text"
        android:textStyle="italic" />

    <Switch
        android:id="@+id/switch_toggle_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:text="@string/switch_toggle_credits_label" />

    <TextView
        android:id="@+id/settings_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:text="@string/settings_credits_text"
        android:textStyle="italic" />

</LinearLayout>