<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:fadeScrollbars="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarSize="@dimen/scrollbar_size"
    android:scrollbarStyle="outsideOverlay" >


	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	
	    <ImageView
	        android:id="@+id/editProfileMainImage"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:scaleType="centerCrop"
	        android:src="@drawable/ic_profile_image" />
	
	    <TabHost
	        android:id="@+id/editProfileTabs"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/editProfileMainImage"
	        android:layout_marginTop="-50dp" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical" >
	
	            <TabWidget
	                android:id="@android:id/tabs"
	                android:layout_width="match_parent"
	                android:layout_height="50dp"
	                android:alpha=".5" >

	            </TabWidget>
	
	            <FrameLayout
	                android:id="@android:id/tabcontent"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent" >
	
	                <LinearLayout
						android:id="@+id/tab_data" 
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent" >

						<TableLayout
						    android:layout_width="match_parent"
						    android:layout_height="wrap_content" >
					
						    <TableRow
						        android:id="@+id/tableRow1"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content" >
						
						        <TextView
						            android:id="@+id/editProfileNickname"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:text="@string/edit_profile_label_nickname_text" />
						        
						        <EditText
						            android:id="@+id/edit_profile_field_nickname"
						            android:layout_gravity="center_vertical"
						            android:hint="@string/edit_profile_field_nickname_hint"
						            android:inputType="textPersonName" />
						
						    </TableRow>
						
						    <TableRow
						        android:id="@+id/tableRow2"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content" >
						
						        <TextView
						            android:id="@+id/editProfileAge"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:text="@string/edit_profile_label_age_text" />
						        
						        <Spinner
						            android:id="@+id/edit_profile_spinner_age"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:entries="@array/age_array"
						            android:prompt="@string/edit_profile_spinner_age_prompt" >
						        </Spinner>
						
						    </TableRow>
						
						    <TableRow
						        android:id="@+id/tableRow3"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content" >
						
						        <TextView
						            android:id="@+id/editProfileGender"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:text="@string/edit_profile_label_gender_text" />
						        
						        <Spinner
						            android:id="@+id/edit_profile_spinner_gender"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:entries="@array/gender_array"
						            android:prompt="@string/edit_profile_spinner_gender_prompt" >
						        </Spinner>
						
						    </TableRow>
						
						    <TableRow
						        android:id="@+id/tableRow4"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content" >
						
						        <TextView
						            android:id="@+id/editProfileCountry"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:text="@string/edit_profile_label_country_text" />
								
						        <Spinner
							        android:id="@+id/edit_profile_spinner_country"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:layout_gravity="center_vertical"
							        android:entries="@array/country_array"
						        	android:prompt="@string/edit_profile_spinner_country_prompt" >
						        </Spinner>
						            
						    </TableRow>
						    
						    <TableRow
						        android:id="@+id/tableRow5"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content" >
						
						        <TextView
						            android:id="@+id/editProfileLanguage"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:text="@string/edit_profile_label_language_text" />
						        
						        <Spinner
						            android:id="@+id/edit_profile_spinner_language"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:entries="@array/language_array"
						            android:prompt="@string/edit_profile_spinner_language_prompt" >
						        </Spinner>
						
						    </TableRow>
						    
						    <TableRow
						        android:id="@+id/tableRow6"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content" >
						
						        <TextView
						            android:id="@+id/editProfileName"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:text="@string/edit_profile_label_name_text" />
						
						        <EditText
						            android:id="@+id/edit_profile_field_name"
						            android:hint="@string/edit_profile_field_name_hint"
						            android:inputType="textPersonName" />
						    
						    </TableRow>
						    
						    <TableRow
						        android:id="@+id/tableRow7"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content" >
						
						        <TextView
						            android:id="@+id/editProfileSurname"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content"
						            android:layout_gravity="center_vertical"
						            android:text="@string/edit_profile_label_surname_text"  />
						
						        <EditText
						            android:id="@+id/edit_profile_field_surname"
						            android:hint="@string/edit_profile_field_surname_hint"
						            android:inputType="textPersonName" />
						        
						    </TableRow>
						</TableLayout>

	                </LinearLayout>
	
	                <LinearLayout
	                    android:id="@+id/tab_photo"
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent" >
	                    
						<com.devsmart.android.ui.HorizontalListView
					        android:id="@+id/editProfileImageList"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:background="@color/lightgrey" />
	                </LinearLayout>
	
	                <LinearLayout
	                    android:id="@+id/tab_interests"
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent" >
	                    
						<TextView
					        android:id="@+id/textView1"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:gravity="center_horizontal"
					        android:text="Under construction"
					        android:textAppearance="?android:attr/textAppearanceLarge" />
											
	                </LinearLayout>
	            </FrameLayout>
	        </LinearLayout>
	    </TabHost>
	
	</RelativeLayout>
</ScrollView>