<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_horizontal_margin" >

    <TableRow
        android:id="@+id/tableRowContact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/imageIcEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/void_placeholder"
            android:src="@drawable/ic_action_email" />

        <EditText
            android:id="@+id/editProfileFieldEmail"
            android:layout_gravity="center_vertical"
            android:hint="@string/edit_profile_field_email_hint"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowContact2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/imageIcTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/void_placeholder"
            android:src="@drawable/ic_action_call" />

        <EditText
            android:id="@+id/editProfileFieldMobile"
            android:hint="@string/edit_profile_field_mobile_hint"
            android:inputType="phone" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowContact3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/imageFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/void_placeholder"
            android:src="@drawable/facebook_icon" />

        <EditText
            android:id="@+id/editProfileFieldFacebook"
            android:hint="@string/edit_profile_field_facebook_hint"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowContact4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/imageLinkedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/void_placeholder"
            android:src="@drawable/linkedin_icon" />

        <EditText
            android:id="@+id/editProfileFieldLinkedIn"
            android:hint="@string/edit_profile_field_linkedin_hint"
            android:inputType="textPersonName" />
    </TableRow>

</TableLayout>